--- a/cloudevents/cloudevents-dotnet/Properties/launchSettings.json
+++ b/cloudevents/cloudevents-dotnet/Properties/launchSettings.json
@@ -1,23 +1,26 @@
 ﻿{
+  "$schema": "http://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:36111",
-      "sslPort": 44311
+      "applicationUrl": "http://localhost:54236",
+      "sslPort": 44350
     }
   },
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
+      "launchUrl": "",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "aspnet": {
+    "CloudEventsSample": {
       "commandName": "Project",
       "launchBrowser": true,
+      "launchUrl": "",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
